--- a/game.html
+++ b/game.html
@@ -19,10 +19,14 @@
     body {
       min-height: 100vh;
       font-family: Arial, sans-serif;
-      /* AUMENTANDO TRANSPARÊNCIA DO FUNDO */
-      background: linear-gradient(to bottom right, rgba(227,242,253,0.5), rgba(187,222,251,0.5));
+      /* Fundo transparente */
+      background: linear-gradient(
+        to bottom right,
+        rgba(227,242,253,0.5),
+        rgba(187,222,251,0.5)
+      );
       padding: 20px;
-      overflow-y: auto;
+      overflow-y: visible; /* Ajuste para independência */
     }
 
     /* ROBÔ NO TOPO (AGORA ESTÁTICO) */
@@ -32,6 +36,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      position: relative; /* para posicionar o balão */
     }
     #robot-image {
       width: 220px;
@@ -66,7 +71,7 @@
 
     /* ÁREA PRINCIPAL (O JOGO, BOTÕES, ETC) */
     #main-content {
-      margin-bottom: 30px; /* para dar espaço antes do top20 */
+      margin-bottom: 30px; /* para dar espaço antes do scoreboard */
     }
     #top-controls {
       display: flex;
@@ -171,7 +176,7 @@
       color: #fff;
     }
 
-    /* SCOREBOARD (AGORA NO FINAL) */
+    /* SCOREBOARD (NO FINAL) */
     #scoreboard-section {
       background: #fff;
       border: 1px solid #ddd;
@@ -208,7 +213,7 @@
     #owner-game-counter {
       margin-top: 6px;
       text-align: center;
-      display: block; /* agora sempre visível */
+      display: block;
     }
 
     /* RESPONSIVIDADE - até 768px */
@@ -285,7 +290,7 @@
  * 1) CONFIGURANDO FIREBASE
  *******************************************************/
 var firebaseConfig = {
-  apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+  apiKey: "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
   authDomain: "hannahenglishcourse.firebaseapp.com",
   databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "hannahenglishcourse",
@@ -323,12 +328,12 @@ const board          = document.getElementById("board");
 const robotSection   = document.getElementById("robot-section");
 
 /*******************************************************
- * 3) FUNÇÕES DE SCROLL
+ * 4) FUNÇÕES DE SCROLL
  *******************************************************/
 /**
- * scrollToElement: Rola suavemente para um elemento no viewport
+ * scrollToElement: Rola suavemente para um elemento no viewport local (iframe)
  * @param {HTMLElement} el - elemento alvo
- * @param {string} block - start, center, end, etc.
+ * @param {string} block - 'start', 'center', 'end'
  */
 function scrollToElement(el, block="center") {
   if (!el) return;
@@ -339,24 +344,25 @@ function scrollToElement(el, block="center") {
 }
 
 /** 
- * scrollToRobot: rola a tela até o robô
+ * scrollToRobot: rola a tela do iframe até o robô
  */
 function scrollToRobot() {
   scrollToElement(robotSection, "start");
 }
 
 /** 
- * scrollToBoard: rola a tela até o tabuleiro
+ * scrollToBoard: rola a tela do iframe até o tabuleiro
  */
 function scrollToBoard() {
   scrollToElement(board, "start");
 }
 
 /*******************************************************
- * 4) CARREGAR O DICIONÁRIO
+ * 5) CARREGAR O DICIONÁRIO
  *******************************************************/
 async function loadDictionary() {
   try {
+    // Ajuste para o seu dicionário ou manter a path original
     const response = await fetch("dictionaries/Oxford 3000 Word List.txt");
     if (!response.ok) {
       throw new Error(`Failed to load dictionary: ${response.statusText}`);
@@ -370,16 +376,12 @@ async function loadDictionary() {
 loadDictionary();
 
 /*******************************************************
- * 5) ROBÔ E TTS
+ * 6) ROBÔ E TTS
  *******************************************************/
 const robotImage   = document.getElementById("robot-image");
 const robotBalloon = document.getElementById("robot-balloon");
 const synth        = window.speechSynthesis;
 
-/**
- * speakText: faz o robô falar, rola até o robô antes
- * e ao finalizar, rola de volta ao tabuleiro.
- */
 function speakText(text) {
   if (!text) return;
   scrollToRobot(); // rola até o robô para visualização
@@ -412,7 +414,7 @@ const encouragementMessages = [
 ];
 
 /*******************************************************
- * 6) BOTÃO RULES
+ * 7) BOTÃO RULES
  *******************************************************/
 document.getElementById("rules-button").addEventListener("click", () => {
   alert(
@@ -428,7 +430,7 @@ document.getElementById("rules-button").addEventListener("click", () => {
 });
 
 /*******************************************************
- * 7) LOGIN
+ * 8) LOGIN
  *******************************************************/
 auth.onAuthStateChanged(async (user) => {
   if (user) {
@@ -454,7 +456,7 @@ auth.onAuthStateChanged(async (user) => {
 });
 
 /*******************************************************
- * 8) ATUALIZAR EXIBIÇÃO DO SCORE (TOPO)
+ * 9) ATUALIZAR EXIBIÇÃO DO SCORE (TOPO)
  *******************************************************/
 function updatePlayerScoreDisplay() {
   const scoreDisplay = document.getElementById("player-score-display");
@@ -467,7 +469,7 @@ function updatePlayerScoreDisplay() {
 }
 
 /*******************************************************
- * 9) SCOREBOARD
+ * 10) SCOREBOARD
  *******************************************************/
 function loadScoreboard() {
   const scoreList = document.getElementById("score-list");
@@ -491,7 +493,7 @@ function loadScoreboard() {
 }
 
 /*******************************************************
- * 10) OUVIR ESTADO DO JOGO
+ * 11) OUVIR ESTADO DO JOGO
  *******************************************************/
 function listenGameState() {
   db.ref("games/currentGame").on("value", (snap) => {
@@ -509,6 +511,7 @@ function listenGameState() {
     currentWord       = data.word || "";
     currentStatus     = data.status || "idle";
     currentDifficulty = data.difficulty || "easy";
+
     const attemptsObj = data.attempts || {};
     attemptsArray     = Object.keys(attemptsObj).map((key) => attemptsObj[key]);
 
@@ -532,7 +535,7 @@ function listenGameState() {
 }
 
 /*******************************************************
- * 11) START GAME
+ * 12) START GAME
  *******************************************************/
 document.getElementById("start-game").addEventListener("click", startGame);
 
@@ -543,11 +546,9 @@ async function startGame() {
   }
 
   // Se for proprietário, incrementa o contador
-  if (userUid) {
-    if (userRole === "proprietario") {
-      totalGames++;
-      await db.ref("usuarios/" + userUid).update({ gamesPlayed: totalGames });
-    }
+  if (userUid && userRole === "proprietario") {
+    totalGames++;
+    await db.ref("usuarios/" + userUid).update({ gamesPlayed: totalGames });
   }
 
   await db.ref("games/currentGame").remove();
@@ -578,7 +579,7 @@ async function startGame() {
 }
 
 /*******************************************************
- * 12) ESCOLHER PALAVRA
+ * 13) ESCOLHER PALAVRA
  *******************************************************/
 async function pickWordWithDefinition(diff) {
   let minLen=3, maxLen=3;
@@ -607,7 +608,7 @@ async function hasDefinition(word) {
 }
 
 /*******************************************************
- * 13) RENDERIZAR
+ * 14) RENDERIZAR
  *******************************************************/
 function renderAllAttempts() {
   board.innerHTML = "";
@@ -657,13 +658,13 @@ function renderAllAttempts() {
     }
     board.appendChild(newRowDiv);
 
-    // Sempre que a torre se atualiza, garantimos que a linha atual fique visível
+    // Sempre que a torre se atualiza, mantemos a linha atual visível
     scrollToElement(newRowDiv, "center");
   }
 }
 
 /*******************************************************
- * 14) UPDATE UI
+ * 15) UPDATE UI
  *******************************************************/
 function updateUI() {
   const startBtn = document.getElementById("start-game");
@@ -684,9 +685,18 @@ function updateUI() {
 }
 
 /*******************************************************
- * 15) INPUT EVENT (PARA MOBILE E DESKTOP)
+ * 16) INPUT EVENT (PARA MOBILE E DESKTOP)
  *******************************************************/
 // Quando digitamos algo no hiddenInput
+hiddenInput.addEventListener("focus", () => {
+  // Ao focar, avisar o parent que o teclado pode ter aberto
+  postToParent({ type: "KEYBOARD_OPEN" });
+});
+hiddenInput.addEventListener("blur", () => {
+  // Ao desfocar, avisar o parent que o teclado pode ter fechado
+  postToParent({ type: "KEYBOARD_CLOSE" });
+});
+
 hiddenInput.addEventListener("input", (e) => {
   if (currentStatus !== "in_progress" || !currentWord) return;
   const val = e.target.value;
@@ -702,7 +712,6 @@ hiddenInput.addEventListener("input", (e) => {
     e.target.value = ""; 
     renderAllAttempts();
   } else {
-    // se for algo que não é letra, limpamos
     e.target.value = "";
   }
 });
@@ -713,10 +722,8 @@ hiddenInput.addEventListener("keydown", (e) => {
   if (e.key === "Backspace") {
     e.preventDefault();
     if (currentLetters[activeIndex]) {
-      // se o bloco atual tiver letra, limpe
       currentLetters[activeIndex] = "";
     } else if (activeIndex > 0) {
-      // senão, volte um
       activeIndex--;
       currentLetters[activeIndex] = "";
     }
@@ -729,7 +736,7 @@ hiddenInput.addEventListener("keydown", (e) => {
 });
 
 /*******************************************************
- * 16) BOTÃO TRY
+ * 17) BOTÃO TRY
  *******************************************************/
 document.getElementById("try-button").addEventListener("click", () => {
   if (currentStatus !== "in_progress") {
@@ -740,7 +747,7 @@ document.getElementById("try-button").addEventListener("click", () => {
 });
 
 /*******************************************************
- * 17) SUBMETER TENTATIVA
+ * 18) SUBMETER TENTATIVA
  *******************************************************/
 async function submitCurrentRow() {
   if (!currentWord || currentLetters.length !== currentWord.length) {
@@ -792,7 +799,7 @@ async function submitCurrentRow() {
 }
 
 /*******************************************************
- * 18) FEEDBACK (green, yellow, red)
+ * 19) FEEDBACK (green, yellow, red)
  *******************************************************/
 function getFeedback(guess, realWord) {
   const feedback = Array(guess.length).fill("red");
@@ -818,7 +825,7 @@ function getFeedback(guess, realWord) {
 }
 
 /*******************************************************
- * 19) DEFINIÇÃO
+ * 20) DEFINIÇÃO
  *******************************************************/
 async function getDefinition(word) {
   try {
@@ -832,7 +839,7 @@ async function getDefinition(word) {
 }
 
 /*******************************************************
- * 20) CONVITE
+ * 21) CONVITE
  *******************************************************/
 document.getElementById("invite-button").addEventListener("click", () => {
   const shareData = {
@@ -849,16 +856,13 @@ document.getElementById("invite-button").addEventListener("click", () => {
 });
 
 /*******************************************************
- * 21) MOSTRAR PONTOS & CONTADOR PARTIDAS
+ * 22) MOSTRAR PONTOS & CONTADOR PARTIDAS
  *******************************************************/
 function showPersonalScore() {
   const personalScoreSection = document.getElementById("personal-score-section");
   const ownerCounterSection  = document.getElementById("owner-game-counter");
 
-  // Sempre mostra o contador de partidas (para todos)
   document.getElementById("ownerGamesCount").textContent = totalGames;
-
-  // Se não é guest, mostra pontuação
   if (!isGuest) {
     personalScoreSection.style.display = "block";
     document.getElementById("personalScore").textContent = totalPoints;
@@ -866,26 +870,6 @@ function showPersonalScore() {
     personalScoreSection.style.display = "none";
   }
 }
-
-// Impede que o iframe interaja com o scroll da página principal
-window.addEventListener("scroll", () => {
-  // Verifica se o iframe está em foco e impede o scroll da página principal
-  if (window.parent) {
-    const scrollX = window.scrollX;
-    const scrollY = window.scrollY;
-    window.parent.scrollTo(0, 0); // Força o parent a permanecer no topo
-    window.scrollTo(scrollX, scrollY); // Garante que o iframe não desloque internamente
-  }
-});
-
-// Previne o comportamento padrão de focar fora do iframe
-window.addEventListener("blur", (event) => {
-  const activeElement = document.activeElement;
-  if (activeElement && activeElement.tagName === "IFRAME") {
-    event.preventDefault();
-    window.focus();
-  }
-});
 </script>
 </body>
 </html>
