--- a/game.html
+++ b/game.html
@@ -437,6 +437,7 @@ document.getElementById("rules-button").addEventListener("click", () => {
  * 8) LOGIN
  *******************************************************/
 auth.onAuthStateChanged(async (user) => {
+  console.log("Auth state changed:", user); // Adicionado para debug
   if (user) {
     userUid   = user.uid;
     isGuest   = false;
@@ -691,16 +692,6 @@ function updateUI() {
 /*******************************************************
  * 16) INPUT EVENT (PARA MOBILE E DESKTOP)
  *******************************************************/
-// Quando digitamos algo no hiddenInput
-hiddenInput.addEventListener("focus", () => {
-  // Ao focar, avisar o parent que o teclado pode ter aberto
-  postToParent({ type: "KEYBOARD_OPEN" });
-});
-hiddenInput.addEventListener("blur", () => {
-  // Ao desfocar, avisar o parent que o teclado pode ter fechado
-  postToParent({ type: "KEYBOARD_CLOSE" });
-});
-
 hiddenInput.addEventListener("input", (e) => {
   if (currentStatus !== "in_progress" || !currentWord) return;
   const val = e.target.value;
