--- a/game.html
+++ b/game.html
@@ -69,6 +69,14 @@
       background-color: #fb8c00;
     }
 
+#hidden-input {
+  position: absolute;
+  left: -9999px; /* Garante que ele esteja fora da área visível */
+  top: -9999px;  /* Mantém ele bem fora da tela */
+  opacity: 0;    /* Torna o campo invisível */
+  z-index: -1;   /* Certifica-se de que ele não apareça sobre outros elementos */
+}
+
     /* ÁREA PRINCIPAL (O JOGO, BOTÕES, ETC) */
     #main-content {
       margin-bottom: 30px; /* para dar espaço antes do scoreboard */
@@ -655,6 +663,7 @@ function updateUI() {
  * 16) INPUT EVENT (PARA MOBILE E DESKTOP)
  *******************************************************/
 hiddenInput.addEventListener("input", (e) => {
+  e.preventDefault(); // Bloqueia comportamentos padrão do navegador
   if (currentStatus !== "in_progress" || !currentWord) return;
   const val = e.target.value;
   if (!val) return; // se estiver vazio, ignore
@@ -675,9 +684,10 @@ hiddenInput.addEventListener("input", (e) => {
 
 // Para backspace e Enter
 hiddenInput.addEventListener("keydown", (e) => {
+  e.preventDefault(); // Bloqueia comportamentos padrão de todas as teclas
   if (currentStatus !== "in_progress" || !currentWord) return;
+
   if (e.key === "Backspace") {
-    e.preventDefault();
     if (currentLetters[activeIndex]) {
       currentLetters[activeIndex] = "";
     } else if (activeIndex > 0) {
@@ -686,8 +696,8 @@ hiddenInput.addEventListener("keydown", (e) => {
     }
     renderAllAttempts();
   }
+  
   if (e.key === "Enter") {
-    e.preventDefault();
     submitCurrentRow();
   }
 });
