--- a/game.html
+++ b/game.html
@@ -837,6 +837,12 @@ function showPersonalScore() {
     personalScoreSection.style.display = "none";
   }
 }
+
+// Intercepta o foco no hidden-input para evitar scroll
+hiddenInput.addEventListener("focus", (e) => {
+  e.preventDefault(); // Bloqueia o scroll padrão
+  window.scrollTo(0, document.body.scrollHeight); // Garante que o botão "Try" fique visível
+});
 </script>
 </body>
 </html>
