--- a/game.html
+++ b/game.html
@@ -43,26 +43,7 @@
       font-family: 'Arial', sans-serif;
     }
 
-    /* SUBTÍTULO */
-    .subtitle {
-      font-size: 1.5rem;
-      color: #4CAF50 !important;
-      line-height: 1.2;
-      text-shadow: none;
-      font-family: 'Arial', sans-serif;
-      margin-top: 30px;
-      text-align: center;
-    }
-
-    /* IMAGEM DE CONVITE */
-    .invite-image {
-      display: block;
-      margin: 20px auto;
-      max-width: 200px;
-      height: auto;
-    }
-
-    /* ROBÔ NO TOPO (AGORA ESTÁTICO) */
+    /* SEÇÃO DO ROBÔ */
     #robot-section {
       width: 100%;
       max-width: 600px;
@@ -90,20 +71,6 @@
       z-index: 999;
       text-align: center;
     }
-    .btn-invite {
-      margin-top: 8px;
-      border: none;
-      background-color: #ff9800;
-      color: #fff;
-      padding: 10px 16px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 14px;
-    }
-    .btn-invite:hover {
-      background-color: #fb8c00;
-    }
 
     /* ÁREA PRINCIPAL (O JOGO, BOTÕES, ETC) */
     #main-content {
@@ -125,6 +92,7 @@
     }
     #difficulty-select {
       padding: 6px;
+      font-size: 1rem;
     }
     #start-game {
       background-color: #03a9f4;
@@ -134,6 +102,7 @@
       border-radius: 4px;
       font-weight: bold;
       cursor: pointer;
+      font-size: 1rem;
     }
     #start-game:disabled {
       background-color: #bbb;
@@ -147,6 +116,7 @@
       border-radius: 4px;
       font-weight: bold;
       cursor: pointer;
+      font-size: 1rem;
     }
     #rules-button:hover {
       background-color: #00897b;
@@ -155,6 +125,7 @@
       font-weight: bold;
       margin-left: 10px;
       text-align: center;
+      font-size: 1rem;
     }
 
     /* TABULEIRO */
@@ -162,9 +133,9 @@
       width: 100%;
       max-width: 600px;
       min-height: 200px;
-      background: #fff;
+      background: transparent; /* Tornar transparente */
       padding: 10px;
-      border: 1px solid #ddd;
+      border: none; /* Remover borda */
       border-radius: 8px;
       display: flex;
       flex-direction: column;
@@ -206,7 +177,7 @@
       max-width: 300px;
       margin: 15px 0;
       display: block;
-      font-size: 18px;
+      font-size: 1rem;
       padding: 10px;
       border: 2px solid #4caf50;
       border-radius: 8px;
@@ -225,22 +196,7 @@
       border-radius: 4px;
       font-weight: bold;
       cursor: pointer;
-    }
-
-    /* BOTÃO INVITE FRIENDS */
-    #invite-button-main {
-      display: block;
-      margin: 10px 0;
-      padding: 8px 14px;
-      border: none;
-      background-color: #ff9800;
-      color: #fff;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    #invite-button-main:hover {
-      background-color: #fb8c00;
+      font-size: 1rem;
     }
 
     /* BOTÃO BACK */
@@ -254,49 +210,34 @@
       font-weight: bold;
       cursor: pointer;
       box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+      font-size: 1rem;
     }
     #back-button:hover {
       background-color: #333;
-    }
-
-    /* CORES DE FEEDBACK */
-    .green {
-      background-color: #66bb6a;
-      color: #fff;
-    }
-    .yellow {
-      background-color: #ffeb3b;
-      color: #000;
-    }
-    .red {
-      background-color: #f44336;
-      color: #fff;
     }
 
     /* SCOREBOARD (NO FINAL) */
     #scoreboard-section {
       width: 100%;
       max-width: 600px;
-      background: #fff;
+      background: #f0f0f0; /* Cinza não muito claro */
       border: 1px solid #ddd;
       border-radius: 4px;
       padding: 10px;
       margin-top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     #scoreboard-section h3 {
       margin-bottom: 8px;
       text-align: center;
     }
-    .scoreboard-subtitle {
-      font-size: 1.5rem;
-      color: #4CAF50;
-      text-align: center;
-      margin-bottom: 10px;
-    }
     #score-list {
       list-style: none;
       padding: 0;
       margin: 0;
+      width: 100%;
     }
     #score-list li {
       border-bottom: 1px solid #eee;
@@ -314,12 +255,23 @@
       margin-top: 10px;
       text-align: center;
       display: none;
+      font-size: 1rem;
     }
     /* CONTADOR DE PARTIDAS VISÍVEL PARA TODOS */
     #owner-game-counter {
       margin-top: 6px;
       text-align: center;
       display: block;
+      font-size: 1rem;
+    }
+
+    /* IMAGEM DE CONVITE */
+    .invite-image {
+      display: block;
+      margin: 20px auto;
+      max-width: 200px;
+      height: auto;
+      cursor: pointer;
     }
 
     /* RESPONSIVIDADE - até 768px */
@@ -327,21 +279,31 @@
       body {
         padding: 10px;
       }
-      #robot-balloon {
-        position: static;
-        margin-top: 10px;
-      }
-      .btn-invite, #invite-button-main {
-        margin-left: 0;
-      }
-      #hidden-input {
-        max-width: 100%;
-      }
       header h1 {
         font-size: 2rem;
       }
-      .subtitle, .scoreboard-subtitle {
-        font-size: 1.2rem;
+      #robot-image {
+        width: 150px;
+      }
+      #robot-balloon {
+        position: static;
+        margin-top: 10px;
+        transform: none;
+        left: 0;
+        max-width: 100%;
+      }
+      #hidden-input {
+        max-width: 100%;
+        font-size: 1rem;
+      }
+      .letter-block {
+        width: 35px;
+        height: 35px;
+        font-size: 14px;
+      }
+      #try-button, #start-game, #rules-button, #invite-button-main, #back-button {
+        font-size: 0.9rem;
+        padding: 8px 12px;
       }
       .invite-image {
         max-width: 150px;
@@ -349,6 +311,23 @@
       #board, #scoreboard-section, #main-content {
         max-width: 100%;
       }
+    }
+
+    /* BOTÃO INVITE FRIENDS PRINCIPAL */
+    #invite-button-main {
+      display: block;
+      margin: 10px 0;
+      padding: 8px 14px;
+      border: none;
+      background-color: #ff9800;
+      color: #fff;
+      border-radius: 4px;
+      font-weight: bold;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    #invite-button-main:hover {
+      background-color: #fb8c00;
     }
   </style>
 </head>
@@ -387,17 +366,19 @@
       autocorrect="off"
       autocapitalize="none"
       spellcheck="false"
-      placeholder="Digite sua palavra aqui"
+      placeholder="Type a word of X letters"
     >
     <button id="try-button">Try</button>
     <button id="invite-button-main">Invite Friends</button>
-    <button id="back-button">Back</button>
   </div>
 
-  <!-- SUBTÍTULO E IMAGEM DE CONVITE -->
+  <!-- IMAGEM DE CONVITE -->
+  <a href="https://hannahenglishcourse.vercel.app/Apresentacao/propaganda.html">
+    <img src="imagens/convite.gif" alt="Invitation" class="invite-image">
+  </a>
+
+  <!-- SCOREBOARD POR ÚLTIMO -->
   <div id="scoreboard-section">
-    <div class="subtitle">Do you want to learn English while having fun?</div>
-    <img src="imagens/convite.gif" alt="Convite" class="invite-image">
     <h3>Top 20</h3>
     <ol id="score-list"></ol>
 
@@ -411,6 +392,9 @@
       <p>Total Games: <span id="ownerGamesCount"></span></p>
     </div>
   </div>
+
+  <!-- BOTÃO BACK (Último elemento da página) -->
+  <button id="back-button">Back</button>
 
   <script>
   /*******************************************************
@@ -450,11 +434,11 @@
   let currentLetters   = [];
   let activeIndex      = 0; // posição atual para digitação
 
-  const hiddenInput    = document.getElementById("hidden-input");
-  const board          = document.getElementById("board");
-  const robotSection   = document.getElementById("robot-section");
-  const robotBalloon   = document.getElementById("robot-balloon");
-  const backButton     = document.getElementById("back-button");
+  const hiddenInput      = document.getElementById("hidden-input");
+  const board            = document.getElementById("board");
+  const robotSection     = document.getElementById("robot-section");
+  const robotBalloon     = document.getElementById("robot-balloon");
+  const backButton       = document.getElementById("back-button");
   const inviteButtonMain = document.getElementById("invite-button-main");
 
   /*******************************************************
@@ -481,7 +465,7 @@
   const robotImage   = document.getElementById("robot-image");
   const synth        = window.speechSynthesis;
 
-  function speakText(text) {
+  function speakText(text, shouldScroll = false) {
     if (!text) return; 
     const utterance = new SpeechSynthesisUtterance(text);
     utterance.lang  = "en-US";
@@ -495,8 +479,9 @@
       robotImage.src = "imagens/robo_estatico.png";
       setTimeout(() => {
         robotBalloon.style.display = "none";
-        // Scroll para o robô após ele terminar de falar
-        robotSection.scrollIntoView({ behavior: 'smooth' });
+        if (shouldScroll) {
+          robotSection.scrollIntoView({ behavior: 'smooth' });
+        }
       }, 800);   
     };
     synth.speak(utterance);
@@ -674,7 +659,7 @@
     // Define o tamanho do campo de texto
     hiddenInput.maxLength = currentWord.length;
     hiddenInput.value = "";
-    hiddenInput.placeholder = `Digite uma palavra de ${currentWord.length} letras`;
+    hiddenInput.placeholder = `Type a word of ${currentWord.length} letters`;
 
     renderAllAttempts();
     updateUI();
@@ -811,7 +796,7 @@
   });
 
   /*******************************************************
-   * 17) BOTÃO INVITE FRIENDS
+   * 17) BOTÃO INVITE FRIENDS PRINCIPAL
    *******************************************************/
   inviteButtonMain.addEventListener("click", () => {
     const shareData = {
@@ -860,7 +845,7 @@
       const definition = await getDefinition(guessClean);
       let msg = `Congratulations, ${isGuest ? "Guest" : userName}! You found the word "${guessClean}".`;
       if (definition) msg += ` Definition: ${definition}`;
-      speakText(msg);
+      speakText(msg, true); // Passa true para scrollar
 
       if (!isGuest && userUid) {
         let pts = 10;
